# pandoc-tex2svg

./: LICENSE  README.md  math-samples.html  math-samples.md  pandoc-tex2svg.cabal  pandoc-tex2svg.hs  stack.yaml
