name:                pandoc-tex2svg
version:             0.1.0.0
synopsis:            Pandoc filter to convert tex math to SVG
description:         Please see README.md
homepage:            https://github.com/githubuser/pandoc-tex2svg#readme
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2016 John MacFarlane
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pandoc-tex2svg
  hs-source-dirs:      .
  main-is:             pandoc-tex2svg.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, pandoc-types > 1.17 && < 1.18, process, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pandoc-tex2svg
